[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/lever.gd" type="Script" id=1]
[ext_resource path="res://sprites/lever_off.png" type="Texture" id=2]
[ext_resource path="res://sprites/lever_on.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 256.0

[node name="lever" type="Node2D"]

visibility/behind_parent = true
script/script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "default"

[node name="area_1" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_1"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="area_2" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_2"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="area_1" to="." method="_on_area_1_body_enter"]

[connection signal="body_enter" from="area_2" to="." method="_on_area_2_body_enter"]

[connection signal="body_exit" from="area_2" to="." method="_on_area_2_body_exit"]


